--- a/index.html
+++ b/index.html
@@ -3,22 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <title>FlipHTML5 Başlangıç Sayfası</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+
+        .viewer-wrapper {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+        }
+
+        #flipbook {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        .fullscreen-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            padding: 8px 12px;
+            background: rgba(0, 0, 0, 0.6);
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .fullscreen-btn:hover {
+            background: rgba(0, 0, 0, 0.8);
+        }
+    </style>
 </head>
 <body>
 
-    <iframe id="flipbook" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
+    <div class="viewer-wrapper">
+        <iframe id="flipbook" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+        <button class="fullscreen-btn" onclick="goFullscreen()">⛶ Tam Ekran</button>
+    </div>
 
     <script>
-        // URL'den query parametrelerini oku
+        // URL'den query parametresini al (?p=...)
         const params = new URLSearchParams(window.location.search);
-        const page = params.get("p") || "1"; // p yoksa 1. sayfa
+        const page = params.get("p") || "1";
 
-        // FlipHTML5 yayının temel bağlantısını yaz
-        const flipBaseUrl = "https://online.fliphtml5.com/gfeiun/qjup"; // <- bunu kendi yayın adresinle değiştir
+        // Yayın adresi
+        const flipBaseUrl = "https://online.fliphtml5.com/gfeiun/qjup";
 
-        // iframe src'sini oluştur
+        // Sayfa numarasını src'ye yerleştir
         const iframe = document.getElementById("flipbook");
         iframe.src = `${flipBaseUrl}#p=${page}`;
+
+        // Tam ekran fonksiyonu
+        function goFullscreen() {
+            if (iframe.requestFullscreen) {
+                iframe.requestFullscreen();
+            } else if (iframe.mozRequestFullScreen) {
+                iframe.mozRequestFullScreen();
+            } else if (iframe.webkitRequestFullscreen) {
+                iframe.webkitRequestFullscreen();
+            } else if (iframe.msRequestFullscreen) {
+                iframe.msRequestFullscreen();
+            }
+        }
     </script>
 
 </body>
