--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         const page = params.get("p") || "1";
 
         // Yayın adresi
-        const flipBaseUrl = "https://online.fliphtml5.com/gfeiun/qjup";
+        const flipBaseUrl = "https://online.fliphtml5.com/qeygh/vsev/";
 
         // Sayfa numarasını src'ye yerleştir
         const iframe = document.getElementById("flipbook");
